# launchpad-solana-sc

./: .eslintrc  .gitignore  Anchor.toml  SwapStakingContractV2.sol  dev.json  id.json  ido.sol  package-lock.json  package.json  project.json  readme.md
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/constants/: index.js
frontend/src/idl/: crowdfunding.json
frontend/src/launchpad/: lib.rs
frontend/src/routes/: index.jsx
frontend/src/utils/: helper.js  solana.web3.js
programs/crowdfunding/: Cargo.toml
programs/crowdfunding/src/: constants.rs  errors.rs  events.rs  ido.rs  ido_bk3.rs  ido_release.rs  lib copy.rs  lib.rs  lib_bk.rs  lib_bk1.rs  lib_bk2.rs  lib_bk_1.rs  mint_token.rs  types.rs  utils.rs
programs/crowdfunding/src/instructions/: _init_program.rs  admin_role_setup.rs  admin_setup_operator.rs  admin_setup_operator_wallet.rs  admin_setup_release_token.rs  admin_setup_tier_allocate.rs  admin_withdraw.rs  initialize_ido_account.rs  mod.rs  operator_initialize_ido_account.rs  operator_setup_ido.rs  operator_setup_release_token.rs  operator_setup_tier_allocate.rs  operator_withdraw.rs  owner_init_program.rs  update_admin_role.rs  user_claim_token.rs  user_participate_ido.rs
programs/crowdfunding/src/states/: admin.rs  authority_role.rs  ido.rs  mod.rs  onepad_config.rs  releases.rs  rounds.rs  tiers.rs  users.rs
programs/crowdfunding/src/utils/: mod.rs  utils.rs
tests/: crowdfunding.ts  getInfoIdo.js  ido.ultil.ts  ido_type.ts  test_crowdfunding.js  upload_metadata_splToken.ts
(+14 files in other folders)
