[package]
name = "crowdfunding"
version = "0.1.0"
description = "Ido laucnch pad on solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdfunding"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
ahash = "0.8.6"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
solana-safe-math="0.1.0"
