[package]
name = "crowdfunding"
version = "0.1.0"
description = "Ido laucnch pad on solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crowdfunding"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
ahash = "0.8.6"
spl-token = { version="4.0.0", features = [ "no-entrypoint" ] }
solana-safe-math="0.1.0"
anchor-spl = {version = "0.29.0",features = ["metadata"]}

# mpl-token-metadata = { version = "2.0.0" }